--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,10 @@
     "url": "https://github.com/Narigo/todastic/issues"
   },
   "homepage": "https://github.com/Narigo/todastic#readme",
+  "dependencies": {
+    "@todastic/dashboard": "1.0.0",
+    "@todastic/storage-file": "1.0.0"
+  },
   "devDependencies": {
     "jest": "^22.4.4",
     "prettier": "^1.12.1"
