--- a/packages/storage-file/package.json
+++ b/packages/storage-file/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@todastic/file-storage",
+  "name": "@todastic/storage-file",
   "version": "1.0.0",
   "description": "File storage/loading for todastic in .todo files.",
   "main": "src/storage.js",
