--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "format": "prettier --write 'src/**/*.js'",
-	"test": "jest"
+    "start": "todastic",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,9 @@
     "url": "https://github.com/Narigo/todastic/issues"
   },
   "homepage": "https://github.com/Narigo/todastic#readme",
+  "dependencies": {},
   "devDependencies": {
+    "@todastic/cli": "^1.0.0",
     "jest": "^22.4.4",
     "prettier": "^1.12.1"
   }
