--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,10 +2,11 @@
   "name": "@todastic/cli",
   "version": "1.0.0",
   "description": "Command-line interface for todastic.",
-  "main": "src/cli.js",
+  "bin": {
+    "todastic": "./src/cli.js"
+  },
   "scripts": {
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "jest src/"
+    "format": "prettier --write 'src/**/*.js'"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,9 @@
   },
   "homepage": "https://github.com/Narigo/todastic#readme",
   "dependencies": {
-    "@todastic/dashboard": "1.0.0",
-    "@todastic/storage-file": "1.0.0"
+    "@todastic/dashboard": "^1.0.0",
+    "@todastic/storage-file": "^1.0.0",
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
     "jest": "^22.4.4",
