--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bootstrap": "lerna bootstrap",
     "format": "prettier --write 'src/**/*.js'",
     "start": "node ./packages/cli/src/cli.js",
-    "test": "jest"
+    "test": "jest",
+    "test-ci": "jest --ci"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@todastic/cli": "^0.1.1"
   },
   "devDependencies": {
+    "coveralls": "^3.0.1",
     "jest": "^22.4.4",
     "lerna": "^2.11.0",
     "prettier": "^1.12.1"
