Introduce express as web-server

--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "jest": "^22.4.4",
     "prettier": "^1.12.1"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
