--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -23,6 +23,7 @@
     "prettier": "^1.12.1"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
   }
 }
