--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "lerna bootstrap",
     "format": "prettier --write 'src/**/*.js'",
     "start": "node ./packages/cli/src/cli.js",
+    "start-web": "node ./packages/server-web/src/server.js",
     "test": "jest",
     "test-ci": "jest --ci"
   },
