Make socket.io an es6 module by using rollup
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@todastic/server-socket": "^0.1.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "socket.io-client": "^2.1.1",
+    "vue": "^2.5.16"
   }
 }
