--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -4,6 +4,7 @@
   "description": "Provides a web server / client for todastic.",
   "main": "src/server.js",
   "scripts": {
+    "build-client": "rollup -c rollup.config.js",
     "format": "prettier --write 'src/**/*.js'",
     "test": "jest src/"
   },
@@ -20,7 +21,10 @@
   "homepage": "https://github.com/compose-us/todastic#readme",
   "devDependencies": {
     "jest": "^22.4.4",
-    "prettier": "^1.12.1"
+    "prettier": "^1.12.1",
+    "rollup": "^0.60.7",
+    "rollup-plugin-vue": "^4.2.0",
+    "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
     "@todastic/server-socket": "^0.1.0",
