--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node ./packages/cli/src/cli.js",
     "start-web": "node ./packages/server-web/src/server.js",
     "test": "jest",
-    "test-ci": "jest --ci"
+    "test-ci": "jest --ci",
+    "watch-web": "cd packages/server-web && npm run build-client -- --watch"
   },
   "repository": {
     "type": "git",
