--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -23,6 +23,7 @@
     "jest": "^22.4.4",
     "prettier": "^1.12.1",
     "rollup": "^0.60.7",
+    "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-vue": "^4.2.0",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@todastic/server-socket": "^0.1.0",
+    "@todastic/storage-events": "^0.1.0",
     "express": "^4.16.3",
     "socket.io-client": "^2.1.1",
     "vue": "^2.5.16"
