--- a/packages/server-socket/package.json
+++ b/packages/server-socket/package.json
@@ -23,6 +23,7 @@
     "prettier": "^1.12.1"
   },
   "dependencies": {
+    "@todastic/storage-events": "^0.1.0",
     "socket.io": "^2.1.1"
   }
 }
