--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 
 node_js:
-  - "node"
   - "10"
 
 install:
-  - npm install
+  - travis_wait npm install
   - lerna bootstrap
 
 script:
