--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "format": "prettier --write 'src/**/*.js'",
+    "format": "prettier --write 'tests/**/*.js' && lerna run format",
     "start": "node ./packages/cli/src/cli.js",
     "start-web": "node ./packages/server-web/src/server.js",
     "test": "jest",
