Use UUIDs instead of numerical IDs
Signed-off-by: Udo Groebner <udo@groebnerweb.de>

--- a/packages/server-socket/package.json
+++ b/packages/server-socket/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@todastic/storage-events": "^0.1.0",
+    "node-uuid": "^1.4.8",
     "socket.io": "^2.1.1"
   }
 }
