--- a/packages/server-socket/package.json
+++ b/packages/server-socket/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@todastic/storage-events": "^0.2.0",
-    "node-uuid": "^1.4.8",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "uuid": "^3.3.2"
   }
 }
