--- a/packages/storage-users/package.json
+++ b/packages/storage-users/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@todastic/config": "^0.2.1",
     "ajv": "^6.5.2",
+    "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
     "mongoose": "^5.2.6"
   }
