--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@todastic/server-socket": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
+    "@todastic/storage-users": "^0.2.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
