--- a/packages/storage-users/package.json
+++ b/packages/storage-users/package.json
@@ -17,11 +17,13 @@
     "jest": "^23.4.1",
     "prettier": "^1.13.7"
   },
+  "//": "bcrypt can be updated, once https://github.com/kelektiv/node.bcrypt.js/issues/632 is solved",
   "dependencies": {
     "@todastic/config": "^0.2.1",
     "ajv": "^6.5.2",
-    "bcrypt": "^3.0.0",
+    "bcrypt": "^2.0.1",
     "dotenv": "^6.0.0",
-    "mongoose": "^5.2.6"
+    "mongoose": "^5.2.6",
+    "mongoose-bcrypt": "^1.5.1"
   }
 }
