store sessions in mongo

--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -33,7 +33,9 @@
     "@todastic/server-socket": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
     "@todastic/storage-users": "^0.2.1",
+    "@todastic/config": "^0.2.1",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
