--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -35,14 +35,13 @@
     "@todastic/storage-users": "^0.2.1",
     "@todastic/config": "^0.2.1",
     "@todastic/logging": "^0.2.1",
+    "@todastic/authentication": "^0.2.1",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
     "npm": "^6.2.0",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "vue": "^2.5.16"
   }
 }
