--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -42,6 +42,7 @@
     "express-session": "^1.15.6",
     "morgan": "^1.9.0",
     "npm": "^6.2.0",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-resource": "1.5.1"
   }
 }
