Make session store configurable and add tests for API

--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -27,15 +27,16 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-vue": "^4.3.1",
+    "supertest": "^3.1.0",
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
+    "@todastic/authentication": "^0.2.1",
+    "@todastic/config": "^0.2.1",
+    "@todastic/logging": "^0.2.1",
     "@todastic/server-socket": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
     "@todastic/storage-users": "^0.2.1",
-    "@todastic/config": "^0.2.1",
-    "@todastic/logging": "^0.2.1",
-    "@todastic/authentication": "^0.2.1",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
