--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -41,6 +41,7 @@
     "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "helmet": "^3.13.0",
     "morgan": "^1.9.0",
     "npm": "^6.2.0",
     "vue": "^2.5.16",
