--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -45,6 +45,7 @@
     "morgan": "^1.9.0",
     "npm": "^6.2.0",
     "vue": "^2.5.16",
-    "vue-resource": "1.5.1"
+    "vue-resource": "1.5.1",
+    "vue-router": "^3.0.1"
   }
 }
