--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -31,7 +31,6 @@
     "vue-template-compiler": "^2.5.16"
   },
   "dependencies": {
-    "@todastic/authentication": "^0.2.1",
     "@todastic/config": "^0.2.1",
     "@todastic/logging": "^0.2.1",
     "@todastic/server-socket": "^0.2.1",
@@ -44,6 +43,8 @@
     "helmet": "^3.13.0",
     "morgan": "^1.9.0",
     "npm": "^6.2.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "vue": "^2.5.16",
     "vue-resource": "1.5.1",
     "vue-router": "^3.0.1"
