--- a/packages/server-socket/package.json
+++ b/packages/server-socket/package.json
@@ -23,7 +23,13 @@
     "prettier": "^1.13.7"
   },
   "dependencies": {
+    "@todastic/server-web": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
+    "@todastic/storage-users": "^0.2.1",
+    "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
+    "passport": "^0.4.0",
+    "passport.socketio": "^3.7.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
   }
