--- a/packages/konsol/package.json
+++ b/packages/konsol/package.json
@@ -4,7 +4,8 @@
   "description": "A helper console for todastic (like rails console)",
   "main": "src/konsol.js",
   "scripts": {
-    "format": "prettier --write 'src/**/*.js'"
+    "format": "prettier --write 'src/**/*.js'",
+    "konsol": "node src/konsol.js"
   },
   "repository": {
     "type": "git",
