--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - lerna bootstrap
 
 script:
-  - npm run test-ci
+  - docker-compose -p tests run -p 3000 --rm todastic npm run test-ci
 
 after_script:
   # Send coverage data to Coveralls
