--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,14 @@ services:
 
   todastic:
     build: .
+    command: npm run start-web
     image: todastic:latest
+    volumes:
+      - .:/app
     links:
       - mongo:mongo
     ports:
-      - 3000
+      - "3000:3000"
     environment:
       - DB_PORT=27017
       - DB_DATABASE=todastic
