--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "bootstrap": "lerna bootstrap",
     "format": "prettier --write 'tests/**/*.js' && lerna run format",
     "start": "node ./packages/cli/src/cli.js",
-    "start-web": "node ./packages/server-web/src/server.js",
+    "start-web": "node ./packages/server-web/src/start.js",
+    "konsol": "node ./packages/konsol/src/konsol.js",
     "test": "jest",
-    "test-ci": "jest --ci",
+    "test-ci": "jest --ci --detectOpenHandles",
     "watch-web": "cd packages/server-web && npm run build-client -- --watch"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "coveralls": "^3.0.1",
     "jest": "^23.4.1",
     "lerna": "^2.11.0",
+    "mongoose": "^5.2.9",
     "prettier": "^1.13.7"
   }
 }
