--- a/packages/storage-events/package.json
+++ b/packages/storage-events/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "jest": "^23.4.1",
     "prettier": "^1.13.7"
+  },
+  "dependencies": {
+    "uuid": "^3.3.2"
   }
 }
