--- a/packages/storage-users/package.json
+++ b/packages/storage-users/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@todastic/server-web": "^0.2.1",
     "jest": "^23.4.1",
     "prettier": "^1.13.7"
   },
