--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@todastic/config": "^0.2.1",
+    "@todastic/dashboard": "^0.2.1",
     "@todastic/logging": "^0.2.1",
     "@todastic/server-socket": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
