--- a/packages/konsol/package.json
+++ b/packages/konsol/package.json
@@ -22,6 +22,6 @@
     "@todastic/server-web": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
     "@todastic/storage-users": "^0.2.1",
-    "yargs": "^12.0.2"
+    "minimist": "^1.2.0"
   }
 }
