--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start-web": "node ./packages/server-web/src/start.js",
     "local": "npm run watch-web | npm run start-web",
     "konsol": "node ./packages/konsol/src/konsol.js",
+    "user-add": "node ./packages/konsol/src/user-add.js",
     "test": "jest",
     "test-ci": "jest --ci --detectOpenHandles",
     "watch-web": "cd packages/server-web && npm run build-client -- --watch"
