--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -4,8 +4,9 @@
   "description": "Provides a web server / client for todastic.",
   "main": "src/server.js",
   "scripts": {
-    "build-client": "rollup -c rollup.config.js",
+    "build-client": "webpack --config config/webpack/config.js",
     "format": "prettier --write 'src/**/*.js'",
+    "storybook": "start-storybook -p 9001 -c config/storybook",
     "test": "jest src/"
   },
   "repository": {
@@ -20,17 +21,26 @@
   },
   "homepage": "https://github.com/compose-us/todastic#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@storybook/vue": "^4.0.0-alpha.20",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "^8.0.4",
+    "babel-preset-vue": "^2.0.2",
     "jest": "^23.5.0",
     "jest-when": "^1.1.0",
     "mongoose": "^5.2.9",
     "prettier": "^1.13.7",
-    "rollup": "^0.63.2",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-vue": "^4.3.1",
     "supertest": "^3.1.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "@todastic/config": "^0.2.1",
@@ -45,7 +55,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.13.0",
     "morgan": "^1.9.0",
-    "npm": "^6.2.0",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "vue": "^2.5.16",
