--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -31,12 +31,16 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-preset-vue": "^2.0.2",
+    "file-loader": "^2.0.0",
     "jest": "^23.5.0",
     "jest-when": "^1.1.0",
     "mongoose": "^5.2.9",
     "prettier": "^1.13.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "supertest": "^3.1.0",
+    "svg-sprite-loader": "^4.1.2",
+    "svgo": "^1.1.1",
+    "svgo-loader": "^2.2.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.20.2",
