--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -7,7 +7,9 @@
     "build-client": "webpack --config config/webpack/config.js",
     "format": "prettier --write 'src/**/*.js'",
     "storybook": "start-storybook -p 9001 -c config/storybook",
-    "test": "jest src/"
+    "test": "run-s test:*",
+    "test:lib": "jest --config config/jest/config.js src/lib",
+    "test:storyshots": "jest --config config/jest/config-storyshots.js --env=jsdom"
   },
   "repository": {
     "type": "git",
@@ -27,20 +29,24 @@
     "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "@storybook/addon-storyshots": "^4.0.0-alpha.20",
     "@storybook/vue": "^4.0.0-alpha.20",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-preset-vue": "^2.0.2",
     "file-loader": "^2.0.0",
     "jest": "^23.5.0",
     "jest-when": "^1.1.0",
     "mongoose": "^5.2.9",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "supertest": "^3.1.0",
     "svg-sprite-loader": "^4.1.2",
     "svgo": "^1.1.1",
     "svgo-loader": "^2.2.0",
+    "vue-jest": "^2.6.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.20.2",
