--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -2,9 +2,9 @@
   "name": "@todastic/server-web",
   "version": "0.2.1",
   "description": "Provides a web server / client for todastic.",
-  "main": "src/server.js",
+  "main": "src/start.js",
   "scripts": {
-    "build-client": "webpack --config config/webpack/config.js",
+    "build": "webpack --config config/webpack/config.js",
     "format": "prettier --write 'src/**/*.js'",
     "storybook": "start-storybook -p 9001 -c config/storybook",
     "test": "run-s test:*",
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@storybook/addon-storyshots": "^4.0.0-alpha.20",
     "@storybook/vue": "^4.0.0-alpha.20",
@@ -38,7 +39,6 @@
     "file-loader": "^2.0.0",
     "jest": "^23.5.0",
     "jest-when": "^1.1.0",
-    "mongoose": "^5.2.9",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -58,11 +58,10 @@
     "@todastic/logging": "^0.2.1",
     "@todastic/server-socket": "^0.2.1",
     "@todastic/storage-events": "^0.2.1",
+    "@todastic/storage-mongo": "^0.2.1",
     "@todastic/storage-users": "^0.2.1",
     "body-parser": "^1.18.3",
-    "connect-mongo": "^2.0.1",
     "express": "^4.16.3",
-    "express-session": "^1.15.6",
     "helmet": "^3.13.0",
     "morgan": "^1.9.0",
     "npm": "^6.4.1",
