Fix tests, update jest
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/packages/storage-mongo/package.json
+++ b/packages/storage-mongo/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.config.js",
     "clean": "rimraf dist",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "jest src/"
+    "test": "jest --config jest.config.js src/"
   },
   "repository": {
     "type": "git",
@@ -23,8 +23,10 @@
     "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
-    "jest": "^23.4.1",
+    "jest": "^23.6.0",
     "prettier": "^1.13.7",
     "rimraf": "^2.6.2",
     "webpack": "^4.20.2",
@@ -32,6 +34,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@todastic/config": "^0.2.1",
     "connect-mongo": "^2.0.1",
     "express-session": "^1.15.6",
     "mongoose": "^5.2.9",
