--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -2,10 +2,12 @@
   "name": "@todastic/dashboard",
   "version": "0.2.1",
   "description": "Dashboard utility functions for todastic.",
-  "main": "src/dashboard.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "clean": "rimraf dist",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "jest src/"
+    "test": "jest --config jest.config.js src/"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,21 @@
   },
   "homepage": "https://github.com/compose-us/todastic#readme",
   "devDependencies": {
-    "jest": "^23.4.1",
-    "prettier": "^1.13.7"
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "jest": "^23.6.0",
+    "prettier": "^1.13.7",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
