Add dashboard to exclude from babel-loader in server-web
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
+    "clean": "lerna run clean",
     "format": "prettier --write 'tests/**/*.js' && lerna run format",
     "start": "node ./packages/cli/src/cli.js",
     "start-web": "node ./packages/server-web/src/start.js",
