--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -30,17 +30,26 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
+    "@storybook/addon-options": "^3.4.11",
     "@storybook/addon-storyshots": "^4.0.0-alpha.20",
     "@storybook/vue": "^4.0.0-alpha.20",
+    "autoprefixer": "^9.1.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-preset-vue": "^2.0.2",
+    "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "jest": "^23.6.0",
     "jest-when": "^1.1.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "modern-normalize": "^0.5.0",
+    "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.13.7",
+    "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^1.3.3",
     "supertest": "^3.1.0",
     "svg-sprite-loader": "^4.1.2",
     "svgo": "^1.1.1",
