--- a/packages/storage-mongo/package.json
+++ b/packages/storage-mongo/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-proposal-unicode-property-regex": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
@@ -34,6 +35,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "@todastic/config": "^0.2.1",
     "connect-mongo": "^2.0.1",
     "express-session": "^1.15.6",
