combine all coverages into root coverage folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     build: .
     command: npm run start-web
     image: todastic:latest
+    volumes:
+      - ./coverage:/app/coverage
     links:
       - mongo:mongo
     ports:
