--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ after_script:
   # Send coverage data to Coveralls
   - "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
   # Send coverage data to code climate
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --debug --exit-code $TRAVIS_TEST_RESULT
 
