--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "konsol": "node ./packages/konsol/src/konsol.js",
     "user-add": "node ./packages/konsol/src/user-add.js",
     "storyshots": "cd packages/server-web && npm run test:storyshots",
+    "upload-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "combine-coverage": "istanbul report --root coverage",
     "test": "run-s test:* combine-coverage",
     "test:integration": "jest",
     "test:packages": "lerna run test",
-    "test-ci": "run-s test:* combine-coverage",
+    "test-ci": "run-s test:* combine-coverage upload-coverage",
     "test-ci:integration": "jest --ci --detectOpenHandles",
     "test-ci:packages": "lerna run test-ci",
     "watch-web": "cd packages/server-web && npm run build -- --watch"
@@ -39,7 +40,7 @@
     "@todastic/cli": "^0.1.1"
   },
   "devDependencies": {
-    "coveralls": "^3.0.1",
+    "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
     "jest": "^23.5.0",
     "lerna": "^2.11.0",
