--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "storyshots": "cd packages/server-web && npm run test:storyshots",
     "upload-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "combine-coverage": "istanbul report --root coverage",
+    "codeceptjs": "./node_modules/.bin/codeceptjs run --steps",
     "test": "run-s test:* combine-coverage",
     "test:integration": "jest",
     "test:packages": "lerna run test",
@@ -40,12 +41,14 @@
     "@todastic/cli": "^0.1.1"
   },
   "devDependencies": {
+    "codeceptjs": "^1.4.3",
     "coveralls": "^3.0.2",
     "istanbul": "^0.4.5",
     "jest": "^23.5.0",
     "lerna": "^2.11.0",
     "mongoose": "^5.2.9",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.7"
+    "prettier": "^1.13.7",
+    "puppeteer": "^1.9.0"
   }
 }
