--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -30,8 +30,8 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "@storybook/addon-options": "^4.0.0-alpha.23",
     "@storybook/addon-actions": "^4.0.0-alpha.23",
+    "@storybook/addon-options": "^4.0.0-alpha.23",
     "@storybook/addon-storyshots": "^4.0.0-alpha.23",
     "@storybook/vue": "^4.0.0-alpha.23",
     "autoprefixer": "^9.1.5",
@@ -77,6 +77,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-markdown": "^2.2.4",
     "vue-resource": "1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
