--- a/packages/server-web/package.json
+++ b/packages/server-web/package.json
@@ -75,6 +75,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
+    "moo": "^0.4.3",
     "morgan": "^1.9.0",
     "npm": "^6.4.1",
     "passport": "^0.4.0",
