Unrelated: run test-ci in every package

--- a/packages/server-socket/package.json
+++ b/packages/server-socket/package.json
@@ -5,6 +5,7 @@
   "main": "src/server-socket.js",
   "scripts": {
     "format": "prettier --write 'src/**/*.js'",
+    "test-ci": "jest --ci --detectOpenHandles",
     "test": "jest src/"
   },
   "repository": {
