--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -6,7 +6,8 @@
     "todastic": "./src/cli.js"
   },
   "scripts": {
-    "format": "prettier --write 'src/**/*.js'"
+    "format": "prettier --write 'src/**/*.js'",
+    "test-ci": "jest --ci --detectOpenHandles"
   },
   "repository": {
     "type": "git",
