--- a/packages/storage-events/package.json
+++ b/packages/storage-events/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "format": "prettier --write 'src/**/*.js'",
+    "test-ci": "jest --ci --detectOpenHandles",
     "test": "jest src/"
   },
   "repository": {
