--- a/packages/storage-mongo/package.json
+++ b/packages/storage-mongo/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config webpack.config.js",
     "clean": "rimraf dist",
     "format": "prettier --write 'src/**/*.js'",
+    "test-ci": "jest --ci --detectOpenHandles",
     "test": "jest --config jest.config.js src/"
   },
   "repository": {
