Make linter and build work
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "run-s build:*",
     "build:client": "webpack --config config/webpack/client.js",
     "build:server": "webpack --config config/webpack/server.js",
-    "test": "run-s test:*:*",
+    "clean": "rimraf dist/",
+    "start": "npm run clean && npm run build && node dist/server/index.js",
+    "test": "run-s test:**",
+    "test:lint": "eslint --ext .js,.ts,.tsx --max-warnings 0 src config",
     "test:client:unit": "jest --config config/jest/client-unit.config.js",
     "test:server:unit": "jest --config config/jest/server-unit.config.js"
   },
@@ -42,7 +45,6 @@
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
-    "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
@@ -51,6 +53,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "0.0.0",
+    "eslint-plugin-typescript": "^0.13.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
