--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/express": "^4.16.0",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "autoprefixer": "^9.3.0",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-hooks": "0.0.0",
     "eslint-plugin-typescript": "^0.13.0",
+    "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
