--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": "./",
     "rootDir": "./",
     "jsx": "react",
-    "module": "es2015",
+    "module": "commonjs",
     "target": "es2016",
     "noEmit": true,
     "noUnusedLocals": true,
