--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build:client": "webpack --config config/webpack/client.js",
     "build:server": "webpack --config config/webpack/server.js",
     "clean": "rimraf dist/",
-    "start": "npm run clean && npm run build && node dist/server/index.js",
+    "dev": "cross-env NODE_ENV=development run-p dev:*",
+    "dev:client": "npm run build:client -- --watch",
+    "dev:server": "npm run build:server -- --watch",
+    "dev:run": "sleep 5 && nodemon --watch 'dist/server/index.js' --exec 'node dist/server/index.js'",
+    "start": "run-s clean build start:server",
+    "start:server": "node dist/server/index.js",
     "test": "run-s test:**",
     "test:lint": "eslint --ext .js,.ts,.tsx --max-warnings 0 src config",
     "test:client:unit": "jest --config config/jest/client-unit.config.js",
@@ -64,6 +69,7 @@
     "mini-css-extract-plugin": "^0.4.4",
     "modern-normalize": "^0.5.0",
     "node-sass": "^4.10.0",
+    "nodemon": "^1.18.6",
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.14.3",
