--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "run-s build:*",
     "build:client": "webpack --config config/webpack/client.js",
     "build:server": "webpack --config config/webpack/server.js",
+    "build:storybook": "cross-env NODE_ENV=production BABEL_ENV=development build-storybook -c config/storybook -o ./dist/storybook",
     "clean": "rimraf dist/",
     "dev": "cross-env NODE_ENV=development run-p dev:*",
     "dev:client": "npm run build:client -- --watch",
@@ -14,6 +15,7 @@
     "dev:run": "sleep 5 && nodemon --watch 'dist/server/index.js' --exec 'node dist/server/index.js'",
     "start": "run-s clean build start:server",
     "start:server": "node dist/server/index.js",
+    "storybook": "cross-env NODE_ENV=development BABEL_ENV=development start-storybook -p 6006 -c config/storybook",
     "test": "run-s test:**",
     "test:lint": "eslint --ext .js,.ts,.tsx --max-warnings 0 src config",
     "test:client:unit": "jest --config config/jest/client-unit.config.js",
@@ -41,9 +43,12 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@storybook/addon-options": "^4.0.8",
+    "@storybook/react": "^4.0.8",
     "@types/express": "^4.16.0",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/storybook__react": "^4.0.0",
     "autoprefixer": "^9.3.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
