--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,18 @@
 {
-  "printWidth": 120
+  "printWidth": 120,
+  "overrides": [
+    {
+      "files": "*.scss",
+      "options": {
+        "parser": "scss",
+        "singleQuote": true
+      }
+    },
+    {
+      "files": ["*.js", "*.ts", "*.tsx"],
+      "options": {
+        "parser": "babylon"
+      }
+    }
+  ]
 }
