--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "start": "run-s clean build start:server",
     "start:server": "node dist/server/index.js",
     "storybook": "cross-env NODE_ENV=development BABEL_ENV=development start-storybook -p 6006 -c config/storybook",
+    "takeoff": "takeoff",
     "test": "run-s test:**",
-    "test:lint": "eslint --ext .js,.ts,.tsx --max-warnings 0 src config",
-    "test:client:unit": "jest --config config/jest/client-unit.config.js",
-    "test:server:unit": "jest --config config/jest/server-unit.config.js"
+    "test:lint:eslint": "eslint --ext .js,.ts,.tsx --max-warnings 0 src config",
+    "test:lint:stylelint": "stylelint 'src/**/*.scss' --config config/.stylelintrc",
+    "test:unit:client": "jest --config config/jest/client-unit.config.js",
+    "test:unit:server": "jest --config config/jest/server-unit.config.js",
+    "test:storyshots": "jest --config config/jest/storyshots.config.js --env=jsdom"
   },
   "repository": {
     "type": "git",
@@ -44,6 +47,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@storybook/addon-options": "^4.0.8",
+    "@storybook/addon-storyshots": "^4.0.8",
     "@storybook/react": "^4.0.8",
     "@types/express": "^4.16.0",
     "@types/react": "^16.7.7",
@@ -54,6 +58,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
     "cross-env": "^5.2.0",
@@ -80,6 +85,7 @@
     "prettier": "^1.14.3",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
+    "react-test-renderer": "^16.6.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.4",
@@ -93,6 +99,7 @@
     "svg-sprite-loader": "^4.1.3",
     "svgo": "^1.1.1",
     "svgo-loader": "^2.2.0",
+    "takeoff-cli": "^4.0.0",
     "typescript": "^3.1.6",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
