--- a/src/client/.eslintrc
+++ b/src/client/.eslintrc
@@ -1,5 +1,13 @@
 {
   "env": {
     "browser": true
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.story.tsx"],
+      "env": {
+        "node": true
+      }
+    }
+  ]
 }
