--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/express": "^4.16.0",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/storybook__addon-storyshots": "^3.4.3",
     "@types/storybook__react": "^4.0.0",
     "autoprefixer": "^9.3.0",
     "babel-core": "^7.0.0-bridge.0",
