--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/addon-storyshots": "^4.0.8",
     "@storybook/react": "^4.0.8",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.9",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "@types/storybook__addon-storyshots": "^3.4.3",
