--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@storybook/addon-actions": "^4.0.8",
     "@storybook/addon-options": "^4.0.8",
     "@storybook/addon-storyshots": "^4.0.8",
     "@storybook/react": "^4.0.8",
@@ -53,6 +54,7 @@
     "@types/jest": "^23.3.9",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-storyshots": "^3.4.3",
     "@types/storybook__react": "^4.0.0",
     "autoprefixer": "^9.3.0",
@@ -87,7 +89,7 @@
     "prettier": "^1.14.3",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
-    "react-test-renderer": "^16.6.3",
+    "react-test-renderer": "^16.7.0-alpha.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.4",
