--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "body-parser": "^1.18.3",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
+    "connect-mongo": "^2.0.2",
     "convict": "^4.4.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
@@ -77,6 +78,7 @@
     "eslint-plugin-react-hooks": "0.0.0",
     "eslint-plugin-typescript": "^0.13.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "file-loader": "^2.0.0",
     "helmet": "^3.15.0",
     "html-webpack-plugin": "^3.2.0",
